fixed menu options and notification button on resize, no more overflow errors should occur

--- a/current-app-wd/src/css/main.css
+++ b/current-app-wd/src/css/main.css
@@ -77,3 +77,8 @@ a {
 a:hover {
   color: #4B4B4B;
 }
+
+.new-object-input {
+  padding: 20px;
+  padding-left: 30px
+}
